Исправил ошибку в теге"img"

--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -94,7 +94,7 @@
       <div class="reviews__list">
         <blockquote class="reviews__item slider__list slider__item">
           <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Тревиса Баркера"></imd>
+            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Тревиса Баркера">
           </p>
           <cite class="reviews__author-name">
             Трэвис Баркер
@@ -103,7 +103,7 @@
         </blockquote>
         <blockquote class="reviews__item slider__item">
           <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Джона Смита"></imd>
+            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Джона Смита">
           </p>
           <cite class="reviews__author-name">
             Джон Смит
@@ -112,7 +112,7 @@
         </blockquote>
         <blockquote class="reviews__item slider__item">
           <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Ивана Бородайло"></imd>
+            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Ивана Бородайло">
           </p>
           <cite class="reviews__author-name">
             Иван Бородайло
