--- a/src/template/header.html
+++ b/src/template/header.html
@@ -3,7 +3,7 @@
     <img class="page-header__logo-image" src="#" width="226" height="30" alt="Барбершоп Бородинский">
 
   </a>
-  <nav class="main-nav main-nav--closed">
+  <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
@@ -25,7 +25,9 @@
       </ul>
       <ul class="main-nav__list user-list">
         <li class="user-list__item">
-          <a href="#" class="user-list__login">Войти</a>
+          <a href="#" class="user-list__login">
+              <svg class="user-list__login-icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><title>Монтажная область 1</title><polygon points="0 7 8.97 7 8.97 4.06 14.03 8.01 8.97 11.91 8.97 9.06 0 9.02 0 7" fill="#000"/><polygon points="7.01 0 7.01 2 14.03 2 14.03 13.99 7.01 13.99 7.01 16 16 16 16 0 7.01 0" fill="#000"/></svg>
+            Войти</a>
         </li>
       </ul>
 
@@ -33,30 +35,18 @@
   </nav>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </header>
+<script>
+var navMain = document.querySelector('.main-nav');
+var navToggle = document.querySelector('.main-nav__toggle');
+navMain.classList.remove('main-nav--nojs');
+navToggle.addEventListener('click', function(){
+if (navMain.classList.contains('main-nav--closed')){
+  navMain.classList.remove('main-nav--closed');
+  navMain.classList.add('main-nav--opened');
+}else{
+  navMain.classList.add('main-nav--closed');
+  navMain.classList.remove('main-nav--opened');
+}
+});
+</script>
