--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -263,3 +263,39 @@ min-height: 0;
     width: 160px;
   }
 }
+.user-list__login{
+  position: relative;
+  width: auto;
+  height: auto;
+  padding-top: 25px;padding-right: 30px;
+  padding-bottom: 23px;
+  padding-left: 50px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+
+  &:hover{
+    color: #000000;
+    background-color: #fff;
+
+  }
+  &:active{
+    color: rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+  }
+  &:hover .user-list__login-icon{
+    opacity: 0.3;
+    polygon{
+      fill: #000000;
+    }
+  }
+  &:active .user-list__login-icon{
+    opacity: 0.1;
+
+  }
+  .user-list__login-icon{
+    left: 15px;
+  }
+}
