--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -293,28 +293,29 @@
   .user-list {
     width: 60px;
   }
-.user-list__login{
-  width: 60px;
-  height: 70px;
-  padding: 0;
-  font-size: 0;
-  &:hover .user-list__login-icon{
-opacity: 1;
-polygon{
-  fill: #826550;
-}
-  }
-  &:active .user-list__login-icon{
-    opacity: 0.3;
-    polygon{
-      fill: #ffffff;
+  .user-list__login {
+    width: 60px;
+    height: 70px;
+    padding: 0;
+
+    font-size: 0;
+    &:hover .user-list__login-icon {
+      opacity: 1;
+      polygon {
+        fill: #826550;
+      }
+    }
+    &:active .user-list__login-icon {
+      opacity: 0.3;
+      polygon {
+        fill: #ffffff;
+      }
     }
   }
-}
-.user-list__login-icon{
-  top: 29px;
-  left: 12px;
-}
+  .user-list__login-icon {
+    top: 29px;
+    left: 12px;
+  }
 }
 @media(min-width: $desktop-width) {
   .page-header__logo {
@@ -334,66 +335,71 @@ polygon{
   .site-list {
     width: 780px;
   }
-  .site-list__item{
+  .site-list__item {
     margin-right: 0;
-    &--active::after{
+    &--active::after {
       right: 30px;
       left: 30px;
     }
   }
-  .site-list__item a{
+  .site-list__item a {
     padding-right: 31px;
     padding-left: 31px;
   }
-  .site-list__item a[href]{
-    &:hover{
+  .site-list__item a[href] {
+    &:hover {
       color: #000000;
-      background-color: #fff;
 
+      background-color: #ffffff;
     }
-    &:active{
+    &:active {
       color: rgba(0, 0, 0, 0.3);
+
       background-color: #ffffff;
       opacity: 1;
     }
   }
   .user-list {
-    width: 160px;
+    width: auto;
+    max-width: 160px;
   }
 }
-.user-list__login{
+.user-list__login {
   position: relative;
+
   width: auto;
   height: auto;
-  padding-top: 25px;padding-right: 30px;
+  padding-top: 25px;
+  padding-right: 30px;
   padding-bottom: 23px;
   padding-left: 50px;
+
+  font-weight: bold;
   font-size: 18px;
   line-height: 24px;
-  font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
 
-  &:hover{
+  &:hover {
     color: #000000;
-    background-color: #fff;
 
+    background-color: #ffffff;
   }
-  &:active{
+  &:active {
     color: rgba(0, 0, 0, 0.3);
-    background-color: #fff;
+
+    background-color: #ffffff;
   }
-  &:hover .user-list__login-icon{
+  &:hover .user-list__login-icon {
     opacity: 0.3;
-    polygon{
+    polygon {
       fill: #000000;
     }
   }
-  &:active .user-list__login-icon{
+  &:active .user-list__login-icon {
     opacity: 0.1;
-
   }
-  .user-list__login-icon{
+  .user-list__login-icon {
     left: 15px;
   }
 }
