--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,6 +1,6 @@
 <header class="page-header">
   <a class="page-header__logo">
-    <img class="page-header__logo-image" src="#" width="226" height="30" alt="Барбершоп Бородинский">
+    <img class="page-header__logo-image" src="img/desktop/logo_desktop.svg" width="226" height="30" alt="Барбершоп Бородинский">
 
   </a>
   <nav class="main-nav main-nav--closed main-nav--nojs">
