полностью справил ошибки  и добавил ретинизацию

--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -12,11 +12,9 @@
     <table class="stats__list">
       <tr>
         <td class="stats__value">
-          1 500
-          <sup>*</sup>
+          1 500<sup>*</sup>
         </td>
-        <td class="stats__field">рублей
-          <br>вложений</td>
+        <td class="stats__field">рублей <br>вложений</td>
       </tr>
       <tr>
         <td class="stats__value">7 200</td>
@@ -45,7 +43,8 @@
       <ul class="advantages__list slider__list">
         <li class="advantages__item advantage__item--fast slider__item">
           <h3 class="advantages__title">Быстро</h3>
-          <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки.</p>
+          <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы -
+            счастливый обладатель стильной стрижки-минутки.</p>
         </li>
         <li class="advantage__item advantage__item--cool slider__item">
           <h3 class="advantage__title">Круто</h3>
@@ -53,7 +52,8 @@
         </li>
         <li class="advantage__item advantage__item--price slider__item">
           <h3 class="advantage__title">Дорого</h3>
-          <p>Наши мастера профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
+          <p>Наши мастера профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает
+            определенный статус?</p>
         </li>
       </ul>
       <p class="advantage__toggles slider__toggles">
@@ -70,18 +70,21 @@
         <li class="news__item">
           <time class="news__date" datatime="2017-09-29">
             <b class="news__day">29</b>сент</time>
-          <p class="news__text">Нам наконец-то завезли Егермейстер! Теперь вы можете пропустить стаканчик во время стрижки.</p>
+          <p class="news__text">Нам наконец-то завезли Егермейстер! Теперь вы можете пропустить стаканчик во время
+            стрижки.</p>
         </li>
         <li class="news__item">
           <time class="news__date" datatime="2017-09-19">
             <b class="news__day">19</b>сент</time>
-          <p class="news__text">В нашей команде пополнение, Борис "Бритва" Стригунец, обладатель множества титулов и наград пополнил наши стройные
+          <p class="news__text">В нашей команде пополнение, Борис "Бритва" Стригунец, обладатель множества титулов и
+            наград пополнил наши стройные
             ряды. Спешите записаться!</p>
         </li>
         <li class="news__item">
           <time class="news__date" datatime="2017-09-09">
             <b class="news__day">9</b>сент</time>
-          <p class="news__text">Все дорожает, а наши стрижки нет! Как так? Приходите, постригитесь и узнаете, в чем здесь подвох!</p>
+          <p class="news__text">Все дорожает, а наши стрижки нет! Как так? Приходите, постригитесь и узнаете, в чем
+            здесь подвох!</p>
         </li>
       </ul>
       <a href="#" class="news__to-all button">Показать все</a>
@@ -98,7 +101,8 @@
           </p>
           <cite class="reviews__author-name">
             Трэвис Баркер
-            <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, Заскочил побриться, чтобы было видно новую татуировку!</p>
+            <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, Заскочил побриться, чтобы было видно
+              новую татуировку!</p>
           </cite>
         </blockquote>
         <blockquote class="reviews__item slider__item">
