--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,7 +8,7 @@
 /*
 * Third Party
 */
-@import "../../../node_modules/normalize.css/normalize.css";
+@import "../../../node_modules/normalize.css/normalize";
 
 /*
 * Custom style
