--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -88,9 +88,8 @@
 
   list-style: none;
 }
-.site-list {
-  font-weight: bold;
-  a {
+.site-list a {
+
     display: block;
     padding: 12px 21px;
     padding-bottom: 13px;
@@ -104,7 +103,7 @@
     background-color: #826550;
     border-top: 1px solid #886e5b;
     border-bottom: 1px solid #71543f;
-  }
+
 }
 .site-list a[href] {
   &:hover {
@@ -216,7 +215,7 @@
     height: 400px;
 
     background-color: #000000;
-    background-image: url("../img/desktop/back-desktop.jpg");
+    background-image: url("../img/back-desktop.jpg");
     background-repeat: no-repeat;
     background-position: center -9px;
 
@@ -320,7 +319,7 @@
 }
 @media (min-width: 768px) and (min-resolution: 144dpi), (min-width: 768px) and (min-resolution: 1.5dppx) {
   .page-header__logo {
-    background-image: url("../img/desktop/back-desktop@2x.jpg");
+    background-image: url("../img/back-desktop@2x.jpg");
     background-size: 1338px auto;
   }
 }
@@ -414,7 +413,7 @@
   }
   @media (min-width: 1200px) and (min-resolution: 144dpi), (min-width: 1200px) and (min-resolution: 1.5dppx) {
     .page-header__logo {
-      background-image: url("../img/desktop/back-desktop@2x.jpg");
+      background-image: url("../img/back-desktop@2x.jpg");
       background-size: 1338px auto;
     }
   }
