--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,19 +1,19 @@
 <header class="page-header">
   <a class="page-header__logo">
     <picture>
-      <source media="(min-width: 1200px)" srcset="img\desktop\logo_desktop.svg">
-      <source media="(min-width: 768px)" srcset="img\tablet\logo_tablet.svg">
-      <img class="page-header__logo-image" src="img/mobile/logo_mobile.svg" width="226" height="30" alt="Барбершоп Бородинский">
+      <source media="(min-width: 1200px)" srcset="img\logo_desktop.svg">
+      <source media="(min-width: 768px)" srcset="img\logo_tablet.svg">
+      <img class="page-header__logo-image" src="img\logo_mobile.svg" width="226" height="30" alt="Барбершоп Бородинский">
     </picture>
   </a>
   <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
-        <li class="site-list__item ">
+        <li class="site-list__item site-list__item--active">
           <a>Главная</a>
         </li>
-        <li class="site-list__item site-list__item--active">
+        <li class="site-list__item ">
           <a href="#">Наши работы</a>
         </li>
         <li class="site-list__item">
@@ -29,10 +29,6 @@
       <ul class="main-nav__list user-list">
         <li class="user-list__item">
           <a href="#" class="user-list__login">
-            <svg class="user-list__login-icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-              <polygon points="0 7 8.97 7 8.97 4.06 14.03 8.01 8.97 11.91 8.97 9.06 0 9.02 0 7" />
-              <polygon points="7.01 0 7.01 2 14.03 2 14.03 13.99 7.01 13.99 7.01 16 16 16 16 0 7.01 0" />
-            </svg>
             Войти</a>
         </li>
       </ul>
@@ -40,17 +36,3 @@
   </nav>
 </header>
 
-<script>
-  var navMain = document.querySelector('.main-nav');
-  var navToggle = document.querySelector('.main-nav__toggle');
-  navMain.classList.remove('main-nav--nojs');
-  navToggle.addEventListener('click', function () {
-    if (navMain.classList.contains('main-nav--closed')) {
-      navMain.classList.remove('main-nav--closed');
-      navMain.classList.add('main-nav--opened');
-    } else {
-      navMain.classList.add('main-nav--closed');
-      navMain.classList.remove('main-nav--opened');
-    }
-  });
-</script>
