начал самостоятельную верстку

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,7 +13,7 @@
 /*
 * Custom style
 */
-@import "partials/header";
-@import "partials/main-page";
+@import "partials/header_new";
+// @import "partials/main-page";
 
 
