--- a/src/template/header.html
+++ b/src/template/header.html
@@ -8,6 +8,9 @@
   </a>
   <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    <svg class="menu__button">
+      <use xlink:href="img/sprite.svg#sprt-menu_button" width="36" height="19"></use>
+    </svg>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
