--- a/src/template/header.html
+++ b/src/template/header.html
@@ -7,10 +7,11 @@
     </picture>
   </a>
   <nav class="main-nav main-nav--closed main-nav--nojs">
-    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-    <svg class="menu__button">
-      <use xlink:href="img/sprite.svg#sprt-menu_button" width="36" height="19"></use>
+    <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
+    <svg class="menu__button" width="36" height="19">
+      <use xlink:href="img/sprite.svg#sprt-menu_button" ></use>
     </svg>
+  </button>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
