доверстал класс opened

--- a/src/template/header.html
+++ b/src/template/header.html
@@ -6,11 +6,15 @@
       <img class="page-header__logo-image" src="img\logo_mobile.svg" width="226" height="30" alt="Барбершоп Бородинский">
     </picture>
   </a>
-  <nav class="main-nav main-nav--closed main-nav--nojs">
+  <nav class="main-nav main-nav--opened main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
-    <svg class="menu__button" width="36" height="19">
+    <svg class="button__hamburger" width="36" height="19">
       <use xlink:href="img/sprite.svg#sprt-menu_button" ></use>
     </svg>
+    <svg class="button__cross" width="26" height="25">
+      <use xlink:href="img/sprite.svg#sprt-cross" ></use>
+    </svg>
+
   </button>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
