--- a/src/style/partials/header_new.scss
+++ b/src/style/partials/header_new.scss
@@ -1,31 +1,78 @@
-.page-header{
+.page-header {
   display: flex;
   flex-direction: column;
+  min-width: 320px;
+  margin: 0 auto;
 }
-.page-header__logo{
-width: 226px;
-height: 30px;
-padding-top: 29px;
-padding-bottom: 26px;
-padding-left: 50px;
-padding-right: 50px;
+.page-header__logo {
+  min-width: 226px;
+  margin: 0 auto;
+  padding-top: 29px;
+  padding-right: 50px;
+  padding-bottom: 26px;
+  padding-left: 50px;
+
+  min-width: 30px;
 }
-.main-nav{
-text-align: center;
-position: relative;
+.main-nav {
+  position: relative;
+
+  text-align: center;
 }
-.main-nav--closed{
-  height: 50px;
-  background-color: #826550;
-  padding: 0;
+.main-nav--closed {
   margin: 0;
+  padding: 0;
+
+  background-color: #826550;
+
+  min-width: 50px;
+  .button__cross {
+    display: none;
+  }
 }
-.main-nav__toggle{
-position: absolute;
-top: 0;
-right: 0;
-width: 70px;
-height: 50px;
-background-color: #6a4d38;
-border: none;
+.main-nav--opened {
+  min-width: 250px;
+  min-height: 568px;
+  margin-left: 70px;
+  padding: 0;
+
+  background-color: #826550;
+  box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
+  .button__hamburger {
+    display: none;
+  }
+}
+.main-nav__toggle {
+  min-width: 70px;
+  min-height: 50px;
+
+  background-color: #6a4d38;
+  border: none;
+}
+.button__hamburger {
+  fill: #ffffff;
+  &:hover {
+    opacity: 0.3;
+  }
+}
+.button__cross {
+  min-width: 26px;
+  min-height: 25px;
+
+  fill: #ffffff;
+  &:hover {
+    opacity: 0.3;
+  }
+}
+.main-nav--closed .main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+}  
+.main-nav--opened .main-nav__toggle {
+  position: absolute;
+  top: 0;
+  left: -70px;
+
+  border: none;
 }
