--- a/src/template/header.html
+++ b/src/template/header.html
@@ -6,7 +6,7 @@
       <img class="page-header__logo-image" src="img\logo_mobile.svg" width="226" height="30" alt="Барбершоп Бородинский">
     </picture>
   </a>
-  <nav class="main-nav main-nav--opened main-nav--nojs">
+  <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
     <svg class="button__hamburger" width="36" height="19">
       <use xlink:href="img/sprite.svg#sprt-menu_button" ></use>
