добавил и стилизовал иконку для входа пользователя

--- a/src/template/header.html
+++ b/src/template/header.html
@@ -8,14 +8,14 @@
   </a>
   <nav class="main-nav main-nav--closed main-nav--nojs">
     <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
-    <svg class="button__hamburger" width="36" height="19">
-      <use xlink:href="img/sprite.svg#sprt-menu_button" ></use>
-    </svg>
-    <svg class="button__cross" width="26" height="25">
-      <use xlink:href="img/sprite.svg#sprt-cross" ></use>
-    </svg>
+      <svg class="button__hamburger" width="36" height="19">
+        <use xlink:href="img/sprite.svg#sprt-menu_button"></use>
+      </svg>
+      <svg class="button__cross" width="26" height="25">
+        <use xlink:href="img/sprite.svg#sprt-cross"></use>
+      </svg>
 
-  </button>
+    </button>
     <div class="main-nav__wrapper">
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
@@ -36,6 +36,9 @@
       </ul>
       <ul class="main-nav__list user-list">
         <li class="user-list__item">
+          <svg class="user-list__icon" width="16" height="16">
+            <use xlink:href="img/sprite.svg#sprt-login"></use>
+          </svg>
           <a href="#" class="user-list__login">
             Войти</a>
         </li>
@@ -43,4 +46,3 @@
     </div>
   </nav>
 </header>
-
