--- a/src/style/partials/header_new.scss
+++ b/src/style/partials/header_new.scss
@@ -6,7 +6,7 @@
 }
 .page-header__logo {
   min-width: 226px;
-  min-width: 30px;
+  min-height: 30px;
   margin: 0 auto;
   padding-top: 29px;
   padding-right: 50px;
@@ -30,7 +30,7 @@
 }
 .main-nav--opened {
   min-width: 250px;
-  min-height: 568px;
+  min-height: 80vh;
   margin-left: 70px;
   padding: 0;
 
@@ -84,7 +84,9 @@
 
   list-style: none;
 }
-.site-list {
+.site-list,
+.user-list {
+  margin-left: 7px;
   a {
     display: block;
     padding: 12px 21px;
@@ -92,6 +94,7 @@
 
     font-size: 18px;
     line-height: 24px;
+    text-align: left;
     color: #ffffff;
     text-transform: uppercase;
     text-decoration: none;
@@ -101,12 +104,27 @@
     border-bottom: 1px solid #71543f;
   }
 }
-.main-nav--closed .site-list__item{
+.user-list {
+  position: relative;
+}
+.user-list__item {
+  margin-left: 42px;
+}
+.user-list__icon {
+  position: absolute;
+  top: 18px;
+  left: 20px;
+
+  opacity: 0.4;
+
+  fill: #ffffff;
+}
+.main-nav--closed .site-list__item {
   display: none;
-  &--active{
+  &--active {
     display: block;
   }
 }
-.main-nav--closed .user-list__item{
+.main-nav--closed .user-list__item {
   display: none;
 }
