--- a/src/style/partials/header_new.scss
+++ b/src/style/partials/header_new.scss
@@ -19,27 +19,121 @@
   text-align: center;
 }
 .main-nav--closed {
-  min-width: 50px;
+  min-height: 50px;
   margin: 0;
   padding: 0;
 
   background-color: #826550;
+
+  a {
+    display: block;
+    margin-left: 7px;
+    padding: 12px 21px;
+    padding-bottom: 13px;
+
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
   .button__cross {
     display: none;
   }
 }
+.main-nav--closed .site-list__item {
+  display: none;
+  &--active {
+    display: block;
+  }
+}
+.main-nav--closed .user-list__item {
+  display: none;
+}
+
+.main-nav--closed .main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+}  
+
+
 .main-nav--opened {
-  min-width: 250px;
-  min-height: 80vh;
   margin-left: 70px;
   padding: 0;
 
   background-color: #826550;
-  box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
   .button__hamburger {
     display: none;
   }
 }
+.main-nav--opened .main-nav__toggle {
+  position: absolute;
+  top: 0;
+  left: -70px;
+
+  border: none;
+}
+.main-nav--opened .site-list {
+  min-height: 40vh;
+
+  box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
+
+  a {
+    display: block;
+    margin-left: 7px;
+    padding: 12px 21px;
+    padding-bottom: 13px;
+
+    font-size: 18px;
+    line-height: 24px;
+    text-align: left;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-decoration: none;
+
+    background-color: #826550;
+    border-top: 1px solid #71543f;
+    border-bottom: 1px solid #71543f;
+  }
+}
+.main-nav--opened .user-list {
+  position: relative;
+
+  height: 40vh;
+
+  background-color: #6a4d38;
+  box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
+
+  a {
+    display: block;
+    padding: 12px 21px;
+    padding-bottom: 13px;
+
+    font-size: 18px;
+    line-height: 24px;
+    text-align: left;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+}
+.main-nav--opened .user-list__icon {
+  position: absolute;
+  top: 16px;
+  left: 20px;
+
+  opacity: 0.4;
+
+  fill: #ffffff;
+}
+
+.main-nav--nojs .main-nav__toggle {
+  display: none;
+}
+
+
 .main-nav__toggle {
   min-width: 70px;
   min-height: 50px;
@@ -63,68 +157,12 @@
     opacity: 0.3;
   }
 }
-.main-nav--closed .main-nav__toggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-}  
-.main-nav--opened .main-nav__toggle {
-  position: absolute;
-  top: 0;
-  left: -70px;
-
-  border: none;
-}
-.main-nav--nojs .main-nav__toggle {
-  display: none;
-}
 .main-nav__list {
   margin: 0;
   padding: 0;
 
   list-style: none;
 }
-.site-list,
-.user-list {
-  margin-left: 7px;
-  a {
-    display: block;
-    padding: 12px 21px;
-    padding-bottom: 13px;
-
-    font-size: 18px;
-    line-height: 24px;
-    text-align: left;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-decoration: none;
-
-    background-color: #826550;
-    border-top: 1px solid #71543f;
-    border-bottom: 1px solid #71543f;
-  }
-}
-.user-list {
-  position: relative;
-}
 .user-list__item {
   margin-left: 42px;
-}
-.user-list__icon {
-  position: absolute;
-  top: 18px;
-  left: 20px;
-
-  opacity: 0.4;
-
-  fill: #ffffff;
-}
-.main-nav--closed .site-list__item {
-  display: none;
-  &--active {
-    display: block;
-  }
-}
-.main-nav--closed .user-list__item {
-  display: none;
 }
