--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -4,7 +4,7 @@
   <section class="stats">
     <header class="stats__header">
       <h2 class="visually-hidden">Статистика Барбершопа</h2>
-      <b class="stats__slogan">Стрижка у нас это выгодно</b>
+      <b class="stats__slogan">Стрижка у нас это выгодно !</b>
       <p class="stats__intro">Мужская стижка требует точного подхода. Обратимся к статистике:</p>
       <small class="stats__legend stats__legend--top">
         <sup>*</sup> - Приведенные данные ложь</small>
