--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -12,26 +12,22 @@
     <table class="stats__list">
       <tr>
         <td class="stats__value">
-          1 500<sup>*</sup>
+          1 500 <sup>*</sup>
         </td>
         <td class="stats__field">рублей <br>вложений</td>
       </tr>
       <tr>
         <td class="stats__value">7 200</td>
-        <td class="stats__field">секунд
-          <br>времени мастера</td>
+        <td class="stats__field">секунд <br>времени мастера</td>
       </tr>
-      <tr class="stats__value">
-        <td>90 00</td>
-        <td class="stats__field">постриженных
-          <br>волос</td>
+      <tr>
+        <td class="stats__value">90 00</td>
+        <td class="stats__field">постриженных <br>волос</td>
       </tr>
-      <tr class="stats__value">
-        <td>500 000
-          <sup>*</sup>
+      <tr>
+        <td class="stats__value">500 000 <sup>*</sup>
         </td>
-        <td class="stats__field">лайков
-          <br>комплиментов</td>
+        <td class="stats__field">лайков и <br>комплиментов</td>
       </tr>
     </table>
     <small class="stats__legend stats__legend--bottom">
