--- a/src/style/partials/main-page-new.scss
+++ b/src/style/partials/main-page-new.scss
@@ -1,33 +1,82 @@
-.stats{
+.stats {
   min-width: 320px;
   margin: 0 auto;
-
 }
-.stats__header{
+.stats__header {
   padding: 30px 0;
+
+  color: #000000;
+
   background-color: #ffffff;
-color: #000000;
 }
-.stats__legend--top{
+.stats__legend{
+  display: block;
+  font-size: 16px;
+  line-height: 27px;
+  opacity: 0.3;
+}
+.stats__legend--top {
   display: none;
 }
-.stats__slogan{
-  display: block;
-  font-size: 27px;
-  line-height: 32px;
-  margin-bottom: 30px;
-padding: 0 40px;
+.stats__legend--bottom{
 text-align: center;
-text-transform: uppercase;
-font-weight: bold;
+padding-top: 20px;
+padding-bottom: 14px;
 
 }
-.stats__intro{
+.stats__slogan {
   display: block;
+  margin-bottom: 30px;
+  padding: 0 40px;
+
+  font-weight: bold;
+  font-size: 27px;
+  line-height: 32px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.stats__intro {
+  display: block;
+  margin: 0;
+  padding: 0 20px;
+
   font-size: 18px;
   line-height: 27px;
-  padding: 0 20px;
   text-align: center;
-  margin: 0;
+}
+.stats__list{
+  background-color: #404040;
+  width: 100%;
+  border-collapse: collapse;
+}
+.stats__list tr{
+  &:nth-child(2){
+    background-color: #4e4e4e;
 
+  }
+&:nth-child(3){
+  background-color: #353535;
+}
+}
+.stats__value,
+.stats__field{
+  width: 50%;
+  padding: 20px;
+}
+.stats__value{
+  font-size: 40px;
+  line-height: 40px;
+  padding-right: 0;
+}
+.stats__value sup{
+  top: -0.35em;
+  margin-left: -2px;
+  font-weight: 400;
+
+}
+.stats__field{
+  padding-left: 0;
+  font-size: 15px;
+  line-height: 18px;
+  text-align: right;
 }
