--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -37,20 +37,20 @@
     <div class="advantage__wrapper slider">
       <h2 class="visually-hidden">Наши преимущества</h2>
       <ul class="advantages__list slider__list">
-        <li class="advantages__item advantage__item--fast slider__item">
+        <li class="advantages__item advantages__item--fast slider__item ">
           <h3 class="advantages__title">Быстро</h3>
-          <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы -
+          <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно <br >и Вы -
             счастливый обладатель стильной стрижки-минутки.</p>
         </li>
-        <!-- <li class="advantage__item advantage__item--cool slider__item">
-          <h3 class="advantage__title">Круто</h3>
-          <p>Забудьте как Вы стириглись раньше. Ьы сделаем из Вас звезду футбола или кино. Во всяком случае внешне.</p>
-        </li> -->
-        <!-- <li class="advantage__item advantage__item--price slider__item">
-          <h3 class="advantage__title">Дорого</h3>
-          <p>Наши мастера профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает
+        <li class="advantages__item advantages__item--cool slider__item no--visible">
+          <h3 class="advantages__title">Круто</h3>
+          <p class="advantages__description">Забудьте как Вы стириглись раньше. Мы сделаем из Вас звезду футбола или кино. Во всяком случае внешне.</p>
+        </li>
+        <li class="advantages__item advantages__item--price slider__item no--visible">
+          <h3 class="advantages__title">Дорого</h3>
+          <p class="advantages__description">Наши мастера профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает
             определенный статус?</p>
-        </li> -->
+        </li>
       </ul>
       <p class="advantage__toggles slider__toggles">
         <button class="slider__toggles" type="button">1</button>
