начал верстку секции новостей сверстал wrapper

--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -61,7 +61,7 @@
   </section>
   <section class="news">
     <div class="news_wrapper">
-      <h2 class="new__title">Новости и акции</h2>
+      <h2 class="news__title">Новости и акции</h2>
       <ul class="news__list">
         <li class="news__item">
           <time class="news__date" datatime="2017-09-29">
