--- a/src/style/partials/main-page-new.scss
+++ b/src/style/partials/main-page-new.scss
@@ -95,7 +95,7 @@
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
-} 
+}
 .advantages__list {
   margin: 0;
   padding: 0;
@@ -109,6 +109,7 @@
 
 .advantages__item {
   padding-top: 172px;
+
   background-repeat: no-repeat;
   background-position: center 35px;
   background-size: 95px 95px;
@@ -145,4 +146,24 @@
   margin: 0;
   margin-bottom: 45px;
   padding: 0;
+}
+.news_wrapper {
+  padding-top: 37px;
+  padding-right: 20px;
+  padding-bottom: 47px;
+  padding-left: 20px;
+
+  font-size: 18px;
+  line-height: 27px;
+  color: #000000;
+  text-transform: uppercase;
+
+  background-color: #f8f5f2;
+}
+.news__title {
+  margin: 0 auto;
+
+  font-size: 30px;
+  line-height: 30px;
+  text-align: center;
 }
