доверстал секцию новости

--- a/src/style/partials/main-page-new.scss
+++ b/src/style/partials/main-page-new.scss
@@ -1,3 +1,4 @@
+//section stats
 .stats {
   min-width: 320px;
   margin: 0 auto;
@@ -86,7 +87,9 @@
   line-height: 18px;
   text-align: right;
 }
+// end section stats
 
+// section advantages
 .slider {
   padding-bottom: 1px;
 
@@ -147,6 +150,10 @@
   margin-bottom: 45px;
   padding: 0;
 }
+//end section advantages
+
+//section news
+
 .news_wrapper {
   padding-top: 37px;
   padding-right: 20px;
@@ -159,11 +166,91 @@
   text-transform: uppercase;
 
   background-color: #f8f5f2;
+  border-bottom: 1px solid rgba(0, 0, 0,0.1);
 }
 .news__title {
   margin: 0 auto;
 
+  font-size: 27px;
+  line-height: 30px;
+  text-align: center;
+}
+.news__list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+  font-size: 14px;
+  line-height: 23px;
+  text-transform: none;
+}
+.news__item {
+  position: relative;
+
+  padding-bottom: 10px;
+  padding-left: 70px;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.news__date {
+  position: absolute;
+  top: 20px;
+  left: 0;
+
+  font-size: 16px;
+  line-height: 10px;
+  // color: #ffffff;
+  text-align: center;
+}
+.news__day {
   font-size: 30px;
   line-height: 30px;
+  // color: #ffffff;
+}
+.date-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.news__to-all {
+  display: block;
+  margin: 0 auto;
+
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  color: #000000;
+  text-decoration: none;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: none;
+}
+.button {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+//end section news
+
+//section reviews
+.reviews__wrapper {
+  padding-top: 30px;
+  padding-right: 40px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+
+  color: #000000;
+
+  background-color: #f8f5f2;
+  &.slider {
+    background-image: url("../img/angle_div_black.svg");
+  }
+}
+.reviews__write {
+  display: none;
+}
+.reviews__title{
+  font-size: 27px;
+  line-height: 30px;
+  margin: 0 auto;
   text-align: center;
 }
