--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -39,16 +39,18 @@
       <ul class="advantages__list slider__list">
         <li class="advantages__item advantages__item--fast slider__item ">
           <h3 class="advantages__title">Быстро</h3>
-          <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно <br >и Вы -
+          <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно <br>и Вы -
             счастливый обладатель стильной стрижки-минутки.</p>
         </li>
         <li class="advantages__item advantages__item--cool slider__item no--visible">
           <h3 class="advantages__title">Круто</h3>
-          <p class="advantages__description">Забудьте как Вы стириглись раньше. Мы сделаем из Вас звезду футбола или кино. Во всяком случае внешне.</p>
+          <p class="advantages__description">Забудьте как Вы стириглись раньше. Мы сделаем из Вас звезду футбола или
+            кино. Во всяком случае внешне.</p>
         </li>
         <li class="advantages__item advantages__item--price slider__item no--visible">
           <h3 class="advantages__title">Дорого</h3>
-          <p class="advantages__description">Наши мастера профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает
+          <p class="advantages__description">Наши мастера профессионалы своего дела и не могут стоить дешево. К тому
+            же, разве цена не дает
             определенный статус?</p>
         </li>
       </ul>
@@ -65,22 +67,30 @@
       <ul class="news__list">
         <li class="news__item">
           <time class="news__date" datatime="2017-09-29">
-            <b class="news__day">29</b>сент</time>
-          <p class="news__text">Нам наконец-то завезли Егермейстер! Теперь вы можете пропустить стаканчик во время
-            стрижки.</p>
+            <b class="news__day">29</b><br>сент
+            <svg class="date-icon" width="60" height="50">
+              <use xlink:href="img/sprite.svg#sprt-rect_arrow"></use>
+            </svg>
+          </time>
+          <p class="news__text">Нам наконец завезли Ягермастер! Теперь вы можете пропустить стаканчик во время стрижки.</p>
         </li>
         <li class="news__item">
           <time class="news__date" datatime="2017-09-19">
-            <b class="news__day">19</b>сент</time>
-          <p class="news__text">В нашей команде пополнение, Борис "Бритва" Стригунец, обладатель множества титулов и
-            наград пополнил наши стройные
-            ряды. Спешите записаться!</p>
+            <b class="news__day">19</b> <br>сент
+            <svg class="date-icon" width="60" height="50">
+              <use xlink:href="img/sprite.svg#sprt-rect_arrow"></use>
+            </svg>
+          </time>
+          <p class="news__text">В нашей команде пополнение, Борис "Бритва" Стригунец, обладатель множества титулов и наград пополнил наши стройные ряды. Спешите записаться!</p>
         </li>
-        <li class="news__item">
+        <li class="news__item no--visible">
           <time class="news__date" datatime="2017-09-09">
-            <b class="news__day">9</b>сент</time>
-          <p class="news__text">Все дорожает, а наши стрижки нет! Как так? Приходите, постригитесь и узнаете, в чем
-            здесь подвох!</p>
+            <b class="news__day">9</b> <br>сент
+            <svg class="date-icon" width="60" height="50">
+              <use xlink:href="img/sprite.svg#sprt-rect_arrow"></use>
+            </svg>
+          </time>
+          <p class="news__text">Все дорожает, а наши стрижки нет! Как так? Приходите, постригитесь и узнаете, в чем здесь подвох!</p>
         </li>
       </ul>
       <a href="#" class="news__to-all button">Показать все</a>
@@ -93,7 +103,7 @@
       <div class="reviews__list">
         <blockquote class="reviews__item slider__list slider__item">
           <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Тревиса Баркера">
+            <img class="revirews__author-image" src="img/foto_Travis_Barker.png" width="50" height="49" alt="Фото Тревиса Баркера">
           </p>
           <cite class="reviews__author-name">
             Трэвис Баркер
