закончил верстать отзывы и начал верстать футер, доверстал до копирайта

--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -2,30 +2,30 @@
   <div class="page-footer__wrapper">
     <div class="page-footer__contacts contacts">
       <b class="contacts__title">Барбершоп Бородинский</b>
-      <p class="contacts__text">г.Санкт-Петербург, <br>ул. Большая Конюшенная 19/8
+      <p class="contacts__text">г. Санкт-Петербург, <br>ул. Большая Конюшенная 19/8
         <br>
         <a href="tel:+78125556666" class="contacts__phone">
-          <span class="contacts__phone-mobile">Тел:</span> +7 (812) 555-66-66
+          <span class="contacts__phone-mobile"></span> +7 (812) 555-66-66
         </a>
       </p>
     </div>
     <div class="page-footer__social social">
-      <b class="social__title">Давайте дружить!</b>
+      <b class="social__title visually-hidden">Давайте дружить!</b>
       <ul class="social__list">
         <li class="social__item">
-          <a href="#" class="social__link social__link--vkontakte">Мы в Вконтакте</a>
+          <a href="#" class="social__link social__link--vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link social__link--fasebook">Мы в Фейсбуке</a>
+          <a href="#" class="social__link social__link--fasebook"><span class="visually-hidden">Мы в Фейсбуке</span></a>
         </li>
         <li class="social__item">
-          <a href="#" class="social__link social__link--instagram">Мы в Инстаграмме</a>
+          <a href="#" class="social__link social__link--instagram"><span class="visually-hidden">Мы в Инстаграмме</span></a>
         </li>
       </ul>
     </div>
-    <div class="page-footer__copyright copyright">
+     <!-- <div class="page-footer__copyright copyright">
       <b class="copyright__text">Разработано:</b>
       <a href="#" class="button copyright__link">HTML Academy</a>
-    </div>
+    </div> -->
   </div>
 </footer>
