--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -102,35 +102,35 @@
       <a href="#" class="reviews__write button">Оставить свой</a>
       <div class="reviews__list">
         <blockquote class="reviews__item slider__list slider__item">
-          <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="img/foto_Travis_Barker.png" width="50" height="49" alt="Фото Тревиса Баркера">
+          <p class="reviews__author-picture">
+            <img class="reviews__author-image" src="img/foto_Travis_Barker.png" width="50" height="49" alt="Фото Тревиса Баркера">
           </p>
           <cite class="reviews__author-name">
             Трэвис Баркер
-            <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, Заскочил побриться, чтобы было видно
-              новую татуировку!</p>
+            <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
           </cite>
         </blockquote>
-        <blockquote class="reviews__item slider__item">
-          <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Джона Смита">
+        <blockquote class="reviews__item slider__item no--visible">
+          <p class="reviews__author-picture">
+            <img class="reviews__author-image" src="img/foto_Travis_Barker.png" width="50" height="33" alt="Фото Джона Смита">
           </p>
           <cite class="reviews__author-name">
             Джон Смит
             <p class="reviews__text">Отличную стижку мне сделали ребята.</p>
           </cite>
         </blockquote>
-        <blockquote class="reviews__item slider__item">
-          <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Ивана Бородайло">
+        <blockquote class="reviews__item slider__item no--visible">
+          <p class="reviews__author-picture">
+            <img class="reviews__author-image" src="img/foto_Travis_Barker.png" width="50" height="33" alt="Фото Ивана Бородайло">
           </p>
           <cite class="reviews__author-name">
             Иван Бородайло
             <p class="reviews__text">В Бородинском ваша борода в надежных руках!</p>
           </cite>
         </blockquote>
-        <button class="reviews__prev" type="button">Предыдуший отзыв</button>
-        <button class="reviews__prev" type="button">Следуюший отзыв</button>
+        <button class="reviews__prev no--visible" type="button">Предыдуший отзыв</button>
+        <button class="reviews__prev
+        no--visible" type="button">Следуюший отзыв</button>
 
       </div>
       <p class="reviews__toggles slider__toggles">
