--- a/src/style/partials/main-page-new.scss
+++ b/src/style/partials/main-page-new.scss
@@ -248,9 +248,38 @@
 .reviews__write {
   display: none;
 }
-.reviews__title{
+.reviews__title {
+  margin: 0 auto;
+  margin-bottom: 35px;
+
   font-size: 27px;
   line-height: 30px;
-  margin: 0 auto;
   text-align: center;
+  text-transform: uppercase;
 }
+.reviews__item {
+  margin: 0;
+  padding: 0;
+}
+.reviews__author-picture {
+  float: left;
+  margin: 0;
+  margin-right: 20px;
+}
+.reviews__author-image {
+  margin-top: 10px;
+}
+.reviews__author-name {
+  font-weight: bold;
+  font-size: 19px;
+  line-height: 27px;
+  font-style: normal;
+}
+.reviews__text {
+  padding-left: 70px;
+
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 23px;
+}
+// end section reviews
