--- a/src/style/partials/footer.scss
+++ b/src/style/partials/footer.scss
@@ -17,8 +17,9 @@
 }
 .contacts__phone {
   display: block;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 20px;
 
   font-weight: bold;
   font-size: 17px;
@@ -49,8 +50,8 @@
 
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  border-top: 1px solid #3e3e3e;
-  border-left: 1px solid #3e3e3e;
+  border: 1px solid #3e3e3e;
+  border-right: none;
   &--vkontakte {
     background-image: url("../img/vk-icon-big.png");
   }
@@ -60,4 +61,33 @@
   &--instagram {
     background-image: url("../img/insta-icon-big.png");
   }
+}
+.copyright{
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+}
+.copyright__text{
+  font-size: 15px;
+  line-height: 27px;
+  font-weight: normal;
+
+}
+.copyright__link{
+display: block;
+border: 1px solid #3e3e3e;
+text-decoration: none;
+color: #ffffff;
+font-size: 18px;
+line-height: 24px;
+font-weight: bold;
+letter-spacing: 1px;
+text-transform: uppercase;
+&:hover{
+  color: #5f5f5f;
+
+}
+
 }
