--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -11,7 +11,7 @@
     </div>
     <div class="page-footer__social social">
       <b class="social__title visually-hidden">Давайте дружить!</b>
-      <ul class="social__list">
+      <ul class="social__list clearfix">
         <li class="social__item">
           <a href="#" class="social__link social__link--vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
         </li>
@@ -23,9 +23,9 @@
         </li>
       </ul>
     </div>
-     <!-- <div class="page-footer__copyright copyright">
-      <b class="copyright__text">Разработано:</b>
+     <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано:</b><br>
       <a href="#" class="button copyright__link">HTML Academy</a>
-    </div> -->
+    </div>
   </div>
 </footer>
