исправил орфографические ошибки

--- a/src/template/main-page.html
+++ b/src/template/main-page.html
@@ -44,7 +44,7 @@
         </li>
         <li class="advantages__item advantages__item--cool slider__item no--visible">
           <h3 class="advantages__title">Круто</h3>
-          <p class="advantages__description">Забудьте как Вы стириглись раньше. Мы сделаем из Вас звезду футбола или кино. Во всяком случае внешне.</p>
+          <p class="advantages__description">Забудьте как Вы стриглись раньше. Мы сделаем из Вас звезду футбола или кино. Во всяком случае внешне.</p>
         </li>
         <li class="advantages__item advantages__item--price slider__item no--visible">
           <h3 class="advantages__title">Дорого</h3>
@@ -92,8 +92,8 @@
       <a href="#" class="reviews__write button">Оставить свой</a>
       <div class="reviews__list">
         <blockquote class="reviews__item slider__list slider__item">
-          <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Тревиса Баркера">
+          <p class="reviews__author-picture">
+            <img class="reviews__author-image" src="#" width="50" height="33" alt="Фото Тревиса Баркера">
           </p>
           <cite class="reviews__author-name">
             Трэвис Баркер
@@ -102,25 +102,25 @@
           </cite>
         </blockquote>
         <blockquote class="reviews__item slider__item">
-          <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Джона Смита">
+          <p class="reviews__author-picture">
+            <img class="reviews__author-image" src="#" width="50" height="33" alt="Фото Джона Смита">
           </p>
           <cite class="reviews__author-name">
             Джон Смит
-            <p class="reviews__text">Отличную стижку мне сделали ребята.</p>
+            <p class="reviews__text">Отличную стрижку мне сделали ребята.</p>
           </cite>
         </blockquote>
         <blockquote class="reviews__item slider__item">
-          <p class="revirews__author-picture">
-            <img class="revirews__author-image" src="#" width="50" height="33" alt="Фото Ивана Бородайло">
+          <p class="reviews__author-picture">
+            <img class="reviews__author-image" src="#" width="50" height="33" alt="Фото Ивана Бородайло">
           </p>
           <cite class="reviews__author-name">
             Иван Бородайло
             <p class="reviews__text">В Бородинском ваша борода в надежных руках!</p>
           </cite>
         </blockquote>
-        <button class="reviews__prev" type="button">Предыдуший отзыв</button>
-        <button class="reviews__prev" type="button">Следуюший отзыв</button>
+        <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+        <button class="reviews__prev" type="button">Следующий отзыв</button>
 
       </div>
       <p class="reviews__toggles slider__toggles">
